# Eigenface-kasvontunnistus

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
dokumentaatio/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti-1.md  viikkoraportti-2.md  viikkoraportti-3.md  viikkoraportti-4.md  viikkoraportti-5.md  viikkoraportti-6.md
src/: app.py  faces.py  index.py  individual.py  main.py  operations.py
src/tests/: app_test.py  individual_test.py  operations_test.py
src/ui/: ui.py
